tests/expectations/compiler/async_blocks/non_async_before_complex_async_fail.out
Error [ESAZ0374004]: The call to mid.aleo/mid will result in failed executions on-chain.
    --> compiler-test:8:25
     |
   8 |         let f1: Final = mid.aleo/mid(0u32);
     |                         ^^^^^^^^^^^^^^^^^^
     |
     = There is a subtle error that occurs if an entry point fn returning Final follows a non-Final entry point fn call, and the call returns a `Final` that itself takes a `Final` as an input. See `https://github.com/AleoNet/snarkVM/issues/2570` for more context.
Error [ESAZ0374004]: The call to mid.aleo/mid will result in failed executions on-chain.
    --> compiler-test:9:25
     |
   9 |         let f2: Final = mid.aleo/mid(1u32);
     |                         ^^^^^^^^^^^^^^^^^^
     |
     = There is a subtle error that occurs if an entry point fn returning Final follows a non-Final entry point fn call, and the call returns a `Final` that itself takes a `Final` as an input. See `https://github.com/AleoNet/snarkVM/issues/2570` for more context.
Error [ESAZ0374004]: The call to mid.aleo/mid will result in failed executions on-chain.
    --> compiler-test:20:25
     |
  20 |         let f2: Final = mid.aleo/mid(1u32);
     |                         ^^^^^^^^^^^^^^^^^^
     |
     = There is a subtle error that occurs if an entry point fn returning Final follows a non-Final entry point fn call, and the call returns a `Final` that itself takes a `Final` as an input. See `https://github.com/AleoNet/snarkVM/issues/2570` for more context.
